--- a/iOTClient/Properties/Resources.resx
+++ b/iOTClient/Properties/Resources.resx
@@ -136,4 +136,7 @@
   <data name="turtlebot_2_lg" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\turtlebot_2_lg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="goal" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\archer-clipart-archery-bullseye-15.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
