--- a/iOTClient/Properties/Resources.resx
+++ b/iOTClient/Properties/Resources.resx
@@ -118,58 +118,64 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="dokarabasi" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\dok-arabasi.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="WaitingStation" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\WaitingStation.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="close2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\close2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="WorkSatation" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\WorkSatation.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="turtlebot_urdf" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\turtlebot_urdf1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="goal" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\archer-clipart-archery-bullseye-15.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="bos" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bos.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="dokarabasi" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dok-arabasi.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="target1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\target1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="turtlebot_2_lg" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\turtlebot_2_lg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="close" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\off-1292831_960_720.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="machine" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\machine1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="ChargeSatation" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ChargeSatation.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="ChargeSatationFree" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ChargeSatationFree.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="bos" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bos.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="dokarabasi_free" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\dokarabasi_free.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="turtlebot_2_lg" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\turtlebot_2_lg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ChargeSatation" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ChargeSatation.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="WorkSatation" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\WorkSatation.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="goal_free" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\archer-clipart-archery-bullseye-151.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="machine_free" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\machine11.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="close2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\close2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="turtlebot_2_lg_free" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\turtlebot_2_lg_free.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="WaitingStationFree" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\WaitingStationFree.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="turtlebot_2_lg_free" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\turtlebot_2_lg_free.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="close" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\off-1292831_960_720.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="machine_free" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\machine11.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="machine" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\machine1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="goal" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\archer-clipart-archery-bullseye-15.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ChargeSatationFree" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ChargeSatationFree.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="StartStation" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\StartStation.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="turtlebot_urdf" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\turtlebot_urdf1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="FinishStation" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\FinishStation.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
