--- a/iOTClient/Properties/Resources.resx
+++ b/iOTClient/Properties/Resources.resx
@@ -178,4 +178,13 @@
   <data name="FinishStation" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\FinishStation.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="bos_dok_arabasi" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bos_dok_arabasi.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="FinishStationFree" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\FinishStationFree.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="StartStationFree" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\StartStationFree.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
