--- a/iOTClient/Properties/Resources.resx
+++ b/iOTClient/Properties/Resources.resx
@@ -133,14 +133,23 @@
   <data name="dokarabasi_free" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\dokarabasi_free.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="bos_dok_arabasi" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bos_dok_arabasi.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="turtlebot_2_lg" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\turtlebot_2_lg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ChargeSatation" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ChargeSatation.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="FinishStationFree" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\FinishStationFree.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="WorkSatation" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\WorkSatation.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ChargeSatationFree" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ChargeSatationFree.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="goal_free" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\archer-clipart-archery-bullseye-151.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -160,14 +169,17 @@
   <data name="machine_free" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\machine11.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="FinishStation" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\FinishStation.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="machine" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\machine1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="goal" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\archer-clipart-archery-bullseye-15.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="ChargeSatationFree" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ChargeSatationFree.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="StartStationFree" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\StartStationFree.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="StartStation" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\StartStation.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -175,16 +187,7 @@
   <data name="turtlebot_urdf" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\turtlebot_urdf1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="FinishStation" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\FinishStation.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="bos_dok_arabasi" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bos_dok_arabasi.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="FinishStationFree" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\FinishStationFree.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="StartStationFree" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\StartStationFree.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="kumas" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\kumas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
